# tlg-tool

./: README.md  meson.build
libtlg/: SaveTLG.cpp  handlestream.cpp  libtlg.vcproj.8.00.old  memstream.cpp  meson.build
src/: dict_file.cpp  dict_file.h  file_stream.cpp  file_stream.h  main.cpp
subprojects/: getopt.wrap
